--- a/css/reportico.css
+++ b/css/reportico.css
@@ -314,9 +314,6 @@ a:visited
     padding-bottom: 10px;
     padding-top: 20px;
     padding-left: 20px;
-    /*background-image: url('bggray.png');*/
-    background-repeat: repeat-x;
-    background-position: top left;
 }
 
 .swPrpCritBox
@@ -348,8 +345,7 @@ a:visited
 .swPrpCritLine
 {
     text-align: left;
-    border: groove thin;
-    border-color : #DDFFDD;
+    border: none;
     width: 100%;
     margin: 0;
     padding: 0;
@@ -478,9 +474,6 @@ a:visited
     padding-top: 20px;
     border-bottom: 1px solid #d0ccc9;
     padding-left: 20px;
-    background-image: url('bggray.png');
-    background-repeat: repeat-x;
-    background-position: top left;
 }
 
 /* Table container for whole Report */
@@ -657,7 +650,7 @@ a:visited
 
 .swCSVBox, .swHTMLBox, .swPDFBox, .swPrintBox, .swXMLBox, .swJSONBox
 {
-    width: 30px;
+    width: 30px !important;
     text-align: left;
     padding: 0px;
     margin: 0px 0px 0px 0px;
@@ -677,7 +670,7 @@ a:visited
 .swRepPrintBox,
 .swRepBackBox
 {
-    width: 38px;
+    width: 38px !important;
     height: 38px;
     margin: 0px 0px 0px 0px;
     float: left;
@@ -695,9 +688,9 @@ a:visited
     float: left;
 }
 
-.swRepPrintBox .swLinkMenu { background-image: url(../images/printer.png); }
-.swRepRefreshBox .swLinkMenu { background-image: url(../images/refreshbutton.png); }
-.swRepBackBox .swLinkMenu { background-image: url(../images/backbutton.png); }
+.swRepPrintBox .swLinkMenu { height: 32px !important; background-image: url(../images/printer.png); }
+.swRepRefreshBox .swLinkMenu { height: 32px !important; background-image: url(../images/refreshbutton.png); }
+.swRepBackBox .swLinkMenu { height: 32px !important; background-image: url(../images/backbutton.png); }
 
 .swRepBackButton:hover 
 {
@@ -870,7 +863,7 @@ a:visited
     background-color: #CCCCFF;
     border-style: none;
     font-size: 10pt;
-    width: 100%;
+    width: 100% !important;
     color: #111111;
     font-weight: bold;
     text-align: center;
@@ -882,7 +875,7 @@ a:visited
     background-color: #F5F5F5;
     border-style: none;
     font-size: 10pt;
-    width: 100%;
+    width: 100% !important;
     color: #111111;
     text-align: center;
     padding: 5px;
@@ -911,7 +904,7 @@ a:visited
 .swMntVertTabMenuButSel
 { 
     background-color: #CCCCFF;
-    width: 220px;
+    width: 220px !important;
     color: #111111;
     font-weight: bold;
     text-align: center;
@@ -921,7 +914,7 @@ a:visited
 .swMntVertTabMenuButUnsel
 { 
     background-color: #F5F5F5;
-    width: 220px;
+    width: 220px !important;
     color: #111111;
     text-align: center;
     padding: 5px 0px 5px 0px;
@@ -986,6 +979,7 @@ a:visited
 .swMntSetField textarea
 {
     font-size: 10pt;
+    width: auto;
 }
 
 .swMntHelpLink
@@ -1064,4 +1058,43 @@ a:visited
 
     .swRepTitle { font-size: 18pt; text-align: center; margin-top: 0px; border: none;}
     .swMntForm { text-align: left; margin-left: 0%; background-color: #ffffff; border: none; }
+}
+
+
+.reportico-chart-container {
+    box-sizing: border-box;
+    text-align: center;
+    display: block;
+    max-width: 100%;
+    padding: 20px 15px 15px 15px;
+    margin: 15px auto 30px auto;
+    border: 1px solid #ddd;
+    background: #fff;
+    background: linear-gradient(#f6f6f6 0, #fff 50px);
+    background: -o-linear-gradient(#f6f6f6 0, #fff 50px);
+    background: -ms-linear-gradient(#f6f6f6 0, #fff 50px);
+    background: -moz-linear-gradient(#f6f6f6 0, #fff 50px);
+    background: -webkit-linear-gradient(#f6f6f6 0, #fff 50px);
+    box-shadow: 0 3px 10px rgba(0,0,0,0.15);
+    -o-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    -ms-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    -webkit-box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+}
+
+.reportico-chart-placeholder {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    line-height: 1.2em;
+}
+
+#reportico_container form .navbar .container
+{
+    width: 100% !important;
+}
+
+#criteriaform .navbar, .swMenuForm .navbar
+{
+    margin-bottom: 0px;
 }
